@@ -1,6 +1,7 @@
 v. 0.17.24
 - angels machine now use more varient pipe
 - nerf evolution nullifier
+- [WIP] init py compatibility.(not have effect yet)
 
 v. 0.17.23
 - higher tier science pack need to craft in higher tier assembling machine
